fix bug scroll overflow unit page

--- a/src/pages/Unit/Unit.css
+++ b/src/pages/Unit/Unit.css
@@ -1,5 +1,9 @@
 .container-unit{
-    margin: 3%;
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    padding-bottom: 3%;
+    /* margin: 3%;    < -- มี margin botton ด้วย ทำให้ ตอนเลื่อน เกินจอ*/
 }
 
 .row-outer-unit{
@@ -56,7 +60,7 @@
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 20px;
   }
   
   .active, .collapsible:hover {
